--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.3.3</version> 
-      
+         </dependency>
+                 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
