--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.3.3</version> 
+        </dependency>
       
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
