--- a/pom.xml
+++ b/pom.xml
@@ -102,10 +102,17 @@
             <version>3.3.3</version> 
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.4.0</version> 
+            <version>4.24.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v111</artifactId>
+            <version>4.8.3</version>
         </dependency>
 
     </dependencies>
