--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,23 @@
             <version>4.8.3</version>
         </dependency>
 
+   <!-- Mockito -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.0.0</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito JUnit 5 integration -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.0.0</version>
+        <scope>test</scope>
+    </dependency>
+
+
     </dependencies>
 
     <build>
